--- a/app/src/components/Header.astro
+++ b/app/src/components/Header.astro
@@ -9,12 +9,16 @@ import logo from "../assets/logo.png"
 
 const menuitems = [
   {
-    title: "Health Program",
+    title: "Servicios de Salud",
     path: "#",
     children: [
       { title: "Nutrición", path: "/nutricion" },
       { title: "Entrenamientos", path: "/entrenamientos" },
     ],
+  },
+  {
+    title: "Más información",
+    path: "/mas-informacion",
   },
   {
     title: "Sobre Nosotros",
