Add the about me page

--- a/app/src/components/Header.astro
+++ b/app/src/components/Header.astro
@@ -21,8 +21,8 @@ const menuitems = [
     path: "/mas-informacion",
   },
   {
-    title: "Sobre Nosotros",
-    path: "/sobre-nosotros",
+    title: "Sobre Mi",
+    path: "/sobre-mi",
   },
   {
     title: "Contacto",
