Add blogs page and blog + add minor fixes

--- a/app/src/components/Header.astro
+++ b/app/src/components/Header.astro
@@ -17,8 +17,8 @@ const menuitems = [
     ],
   },
   {
-    title: "Más información",
-    path: "/mas-informacion",
+    title: "Blogs",
+    path: "/blogs",
   },
   {
     title: "Sobre Mi",
