--- a/app/src/layouts/Layout.astro
+++ b/app/src/layouts/Layout.astro
@@ -13,11 +13,17 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
 		<Header />
 		<slot />
+		<style is:global>
+			img {
+			  content-visibility: auto;
+			}
+		  </style>
 	</body>
 </html>
