--- a/app/src/assets/style/blog.css
+++ b/app/src/assets/style/blog.css
@@ -1,4 +1,11 @@
 h2 {
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 10px; 
+    padding-bottom: 10px;
+}
+
+h3 {
     font-weight: bold;
     padding-top: 10px; 
     padding-bottom: 10px;
