Change images + fix style

--- a/app/src/components/Content.astro
+++ b/app/src/components/Content.astro
@@ -53,7 +53,7 @@ console.log(contenido)
                 </div>
                 <div class="md:basis-1/2 md:mt-0 mt-10 pt-10" aria-hidden="true">
                     <div class="relative m-auto max-w-4xl">
-                        <img alt="Blueprint Image" height="500" src={contenido.image}>
+                        <img alt="Blueprint Image" class="rounded-lg" height="500" src={contenido.image}>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@ console.log(contenido)
             <div class="md:gap-16 md:flex">
                 <div class="md:basis-1/2 md:mt-0 mt-10 pt-10" aria-hidden="true">
                     <div class="relative m-auto max-w-4xl">
-                        <img alt="Blueprint Image" height="500" src={contenido.image}>
+                        <img alt="Blueprint Image" class="rounded-lg" height="500" src={contenido.image}>
                     </div>
                 </div>
                 <div class="md:basis-1/2 self-center">
