--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -18,10 +18,10 @@ const saludFisica = {
 	},
 	{
 		title: "Salud musculoesquelética",
-		description: "Los largos períodos de sedentarismo pueden contribuir a problemas musculoesqueléticos, como dolor de espalda y cuello. Ejercicios específicos, como los de estiramiento y fortalecimiento, pueden aliviar estos síntomas y mejorar la postura."
+		description: "Los largos períodos de sedentarismo pueden contribuir a problemas musculoesqueléticos, como dolor de espalda y cuello. Ejercicios específicos pueden aliviar estos síntomas y mejorar la postura."
 	}
   ],
-  image: "https://scout.es/wp-content/uploads/2022/10/salud-menta-y-atractivo-768x524-1.jpg",
+  image: "https://www.vrim.com.mx/wp-content/uploads/2019/10/importancia-de-la-salud-fisica-scaled-1024x739.jpg",
   color: "#22c2f7"
 }
 
@@ -40,10 +40,10 @@ const saludMental = {
 	},
 	{
 		title: "Aumento de la energía y la concentración",
-		description: "La nutrición adecuada proporciona los nutrientes necesarios para el cerebro, mejorando la concentración y la productividad. El ejercicio regular también aumenta los niveles de energía, lo que puede mejorar el rendimiento laboral."
+		description: "La nutrición adecuada proporciona los nutrientes necesarios para el cerebro, mejorando la concentración y la productividad. El ejercicio regular aumenta la energía y mejora el rendimiento laboral."
 	},
   ],
-  image: "https://scout.es/wp-content/uploads/2022/10/salud-menta-y-atractivo-768x524-1.jpg",
+  image: "https://www.infocop.es/wp-content/uploads/2023/04/agencia-joven-adulto-profesion-destaco-negro-1024x724.jpg",
   color: "#22f757"
 }
 
@@ -66,7 +66,7 @@ const productividad = {
 		description: "La promoción de estilos de vida saludables puede contribuir a una cultura laboral positiva, mejorando la moral y la satisfacción laboral."
 	},
   ],
-  image: "https://scout.es/wp-content/uploads/2022/10/salud-menta-y-atractivo-768x524-1.jpg",
+  image: "https://cdn-lkclf.nitrocdn.com/ENeqGnVqulqCUkWHENZUmuKWbiqyMnwx/assets/images/optimized/rev-e337f31/www.billin.net/blog/wp-content/uploads/2018/04/tecnicas-empresariales-productividad-min.jpg",
   color: "#f5950f"
 }
 ---
@@ -100,7 +100,7 @@ const productividad = {
 				  </h2>
 				</div>
 				<div class="flex items-center text-xs text-zinc-900 text-white pt-5">
-					<a href="/nutricion" class="capitalize text-md relative z-10 rounded-full bg-zinc-50 px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
+					<a href="/nutricion" class="capitalize text-md relative z-10 rounded-full bg-black px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
 				</div>
 			</article>
 	
@@ -119,7 +119,7 @@ const productividad = {
 				  </h2>
 				</div>
 				<div class="flex items-center text-xs text-zinc-900 text-white pt-5">
-					<a href="/entrenamientos" class="capitalize text-md relative z-10 rounded-full bg-zinc-50 px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
+					<a href="/entrenamientos" class="capitalize text-md relative z-10 rounded-full bg-black px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
 				</div>
 			</article>
 		</div>
