Add drafts for login and sign up

--- a/app/src/components/ContactForm.astro
+++ b/app/src/components/ContactForm.astro
@@ -22,7 +22,7 @@ import Button from "./Button.astro";
       name="name"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please provide your full name.
+      Por favor introduzca el nombre completo
     </div>
   </div>
   <div class="mb-5">
@@ -35,10 +35,10 @@ import Button from "./Button.astro";
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     />
     <div class="empty-feedback text-red-400 text-sm mt-1">
-      Please provide your email address.
+      Por favor introduzca el email completo
     </div>
     <div class="invalid-feedback text-red-400 text-sm mt-1">
-      Please provide a valid email address.
+      Por favor introduzca un email válido
     </div>
   </div>
   <div class="mb-3">
@@ -49,7 +49,7 @@ import Button from "./Button.astro";
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please enter your message.
+      Por favor introduzca el mensaje
     </div>
   </div>
   <Button type="submit" size="lg" block>Send Message</Button>
