--- a/app/src/components/ContactForm.astro
+++ b/app/src/components/ContactForm.astro
@@ -16,7 +16,7 @@ import Button from "./Button.astro";
   <div class="mb-5">
     <input
       type="text"
-      placeholder="Full Name"
+      placeholder="Nombre completo"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
       name="name"
@@ -29,7 +29,7 @@ import Button from "./Button.astro";
     <label for="email_address" class="sr-only">Email Address</label><input
       id="email_address"
       type="email"
-      placeholder="Email Address"
+      placeholder="Email"
       name="email"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
@@ -45,14 +45,14 @@ import Button from "./Button.astro";
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder="Mensaje"
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Por favor introduzca el mensaje
     </div>
   </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
+  <button class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-6 py-3 bg-black text-white hover:bg-slate-900  border-2 border-transparent">Enviar mensaje</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
