--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -100,7 +100,7 @@ const productividad = {
 				  </h2>
 				</div>
 				<div class="flex items-center text-xs text-zinc-900 text-white pt-5">
-					<a href="/nutricion" class="capitalize text-md relative z-10 rounded-full bg-black px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
+					<a href="/nutricion" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-6 py-3 bg-black text-white hover:bg-slate-900  border-2 border-transparent"> Comenzar </a>
 				</div>
 			</article>
 	
@@ -119,7 +119,7 @@ const productividad = {
 				  </h2>
 				</div>
 				<div class="flex items-center text-xs text-zinc-900 text-white pt-5">
-					<a href="/entrenamientos" class="capitalize text-md relative z-10 rounded-full bg-black px-3 py-1.5 font-medium text-white hover:bg-gray-400 bg-gray-900 hover:text-gray-900"> Comenzar </a>
+					<a href="/entrenamientos" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-6 py-3 bg-black text-white hover:bg-slate-900 border-2 border-transparent"> Comenzar </a>
 				</div>
 			</article>
 		</div>
