--- a/app/src/pages/iniciar-sesion.astro
+++ b/app/src/pages/iniciar-sesion.astro
@@ -26,9 +26,6 @@ import Layout from "../layouts/Layout.astro";
                     name="username"
                     id="username"
                     />
-                    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-                        Por favor introduzca el usuario
-                    </div>
                 </div>
                 <div class="mb-5">
                     <input
@@ -39,34 +36,12 @@ import Layout from "../layouts/Layout.astro";
                     name="password"
                     id="password"
                     />
-                    <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-                        Por favor introduzca la contraseña
-                    </div>
                 </div>
                 <button class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-6 py-3 bg-black text-white hover:bg-slate-900  border-2 border-transparent">
                     Continue
                 </button>
-                <p id="form-error"></p>
+                <p class="text-red-500" id="form-error"></p>
             </form>
         </div>
     </Container>
 </Layout>
-
-<script>
-	const errorMessageElement = document.getElementById("form-error")!;
-
-	document.forms[0].addEventListener("submit", async (e) => {
-		e.preventDefault();
-		errorMessageElement.innerText = "";
-		const formElement = e.target as HTMLFormElement;
-		const response = await fetch(formElement.action, {
-			method: formElement.method,
-			body: new FormData(formElement)
-		});
-		if (response.ok) {
-			window.location.href = "/";
-		} else {
-			errorMessageElement.innerText = (await response.json()).error;
-		}
-	});
-</script>
