Use webp images stored in CDN in index

--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -21,7 +21,7 @@ const saludFisica = {
 		description: "Los largos períodos de sedentarismo pueden contribuir a problemas musculoesqueléticos, como dolor de espalda y cuello. Ejercicios específicos pueden aliviar estos síntomas y mejorar la postura."
 	}
   ],
-  image: "https://www.vrim.com.mx/wp-content/uploads/2019/10/importancia-de-la-salud-fisica-scaled-1024x739.jpg",
+  image: "https://sd-img.b-cdn.net/home/importancia-de-la-salud-fisica.webp",
   color: "#22c2f7"
 }
 
@@ -43,7 +43,7 @@ const saludMental = {
 		description: "La nutrición adecuada proporciona los nutrientes necesarios para el cerebro, mejorando la concentración y la productividad. El ejercicio regular aumenta la energía y mejora el rendimiento laboral."
 	},
   ],
-  image: "https://www.infocop.es/wp-content/uploads/2023/04/agencia-joven-adulto-profesion-destaco-negro-1024x724.jpg",
+  image: "https://sd-img.b-cdn.net/home/mejora-salud-mental.webp",
   color: "#22f757"
 }
 
@@ -66,7 +66,7 @@ const productividad = {
 		description: "La promoción de estilos de vida saludables puede contribuir a una cultura laboral positiva, mejorando la moral y la satisfacción laboral."
 	},
   ],
-  image: "https://cdn-lkclf.nitrocdn.com/ENeqGnVqulqCUkWHENZUmuKWbiqyMnwx/assets/images/optimized/rev-e337f31/www.billin.net/blog/wp-content/uploads/2018/04/tecnicas-empresariales-productividad-min.jpg",
+  image: "https://sd-img.b-cdn.net/home/software-de-productividad-scaled.webp",
   color: "#f5950f"
 }
 ---
@@ -89,7 +89,7 @@ const productividad = {
 				<div class="rounded-lg block overflow-hidden mb-4">
 				  <a href="/nutricion">
 					<figure class="w-auto h-auto md:h-[150px] object-cover">
-					  <img src="https://www.clinicasbe.es/wp-content/uploads/2021/08/plan-nutricional.jpg" class="transition duration-300 ease-in-out hover:scale-110" alt="Plan nutricional personalizado" loading="lazy" width="400" height="400">
+					  <img src="https://sd-img.b-cdn.net/home/plan-nutricional-personalizado.webp" class="transition duration-300 ease-in-out hover:scale-110" alt="Plan nutricional personalizado" loading="lazy" width="400" height="400">
 					</figure>
 				  </a>
 				</div>
@@ -108,7 +108,7 @@ const productividad = {
 				<div class="rounded-lg block overflow-hidden mb-4">
 				  <a href="/entrenamientos">
 					<figure class="w-auto h-auto md:h-[150px] object-cover">
-					  <img src="https://guiafitness.com/wp-content/uploads/consejos-plan-entrenamiento-semanal-1200x741.jpg" class="transition duration-300 ease-in-out hover:scale-110" alt="Plan nutricional personalizado" loading="lazy" width="400" height="400">
+					  <img src="https://sd-img.b-cdn.net/home/plan-de-entrenamientos-personalizado.webp" class="transition duration-300 ease-in-out hover:scale-110" alt="Plan nutricional personalizado" loading="lazy" width="400" height="400">
 					</figure>
 				  </a>
 				</div>
