--- a/app/src/pages/registro.astro
+++ b/app/src/pages/registro.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
         <div class="px-40 py-20">
             <form
                 method="post"
-                action="/api/registro"
+                action="../auth/registro"
                 class="needs-validation"
                 enctype="multipart/form-data"
                 novalidate
