--- a/app/src/components/Header.astro
+++ b/app/src/components/Header.astro
@@ -80,7 +80,7 @@ const menuitems = [
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="/iniciar-sesion">Iniciar Sesion</a>
+        <a href="/login">Iniciar Sesion</a>
         <Link href="/registro" size="md">Registrarse</Link>
       </div>
     </div>
